@@ -78,3 +78,4 @@
 
 [1.3.1]
   * FEATURE: Meetup.com Api
+  * FEATURE: NetProspex Api
